overflow-fixes

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@
   height: 100%;
   width: 100%;
   overflow: scroll;
+  overflow-x: hidden;
   background-color: rgb(240, 240, 240);
 }
 
